--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "antd": "^5.23.3",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
